--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,8 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+}
 
+.bg-header {
+    background-color: #223A5E
 }
